# weather-service

./: .env-example  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-image.yml
logs/: placeholder.txt
src/: main.py
weather_service/adapter/: twilio_sms_sender.py
