[project]
name = "weather-service"
version = "0.2.0"
description = "Fetch and display current weather using an API"
authors = [
    {name = "Piotr Filochowski",email = "piotr.filochowski01@gmail.com"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.9.6"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "twilio"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
